[gd_scene load_steps=10 format=3 uid="uid://b8ta7o2owor31"]

[ext_resource type="Script" uid="uid://dxko8jj7q3vsp" path="res://scenes_and_scripts/objects/coin.gd" id="1_8edpg"]
[ext_resource type="SpriteFrames" uid="uid://iek4uhrv4gj" path="res://assets/spriteframes/coin.tres" id="2_37lva"]
[ext_resource type="AudioStream" uid="uid://cvnexss3ktj80" path="res://assets/sounds/coin.wav" id="3_o2rvr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l2mxq"]
radius = 15.033297

[sub_resource type="Animation" id="Animation_nx30t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_y3h1m"]
resource_name = "collect"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_l2mxq"]
resource_name = "normal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vkm6o"]
resource_name = "spawn_from_block"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -32.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vkm6o"]
_data = {
&"RESET": SubResource("Animation_nx30t"),
&"collect": SubResource("Animation_y3h1m"),
&"normal": SubResource("Animation_l2mxq"),
&"spawn_from_block": SubResource("Animation_vkm6o")
}

[node name="Coin" type="Node2D"]
script = ExtResource("1_8edpg")

[node name="CoinImage" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_37lva")
animation = &"normal"
centered = false

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(16, 16)
shape = SubResource("CircleShape2D_l2mxq")

[node name="Animations" type="AnimationPlayer" parent="."]
root_node = NodePath("../CoinImage")
libraries = {
&"": SubResource("AnimationLibrary_vkm6o")
}

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_o2rvr")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
